Add `module` field to `package.json` files for Parcel support Resolves #314

--- a/packages/sponge-case/package.json
+++ b/packages/sponge-case/package.json
@@ -28,6 +28,7 @@
     "url": "http://rabins.dev"
   },
   "type": "module",
+  "module": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js"
   },
