--- a/packages/change-case/package.json
+++ b/packages/change-case/package.json
@@ -28,6 +28,7 @@
     "url": "http://blakeembrey.me"
   },
   "type": "module",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
