--- a/packages/title-case/package.json
+++ b/packages/title-case/package.json
@@ -26,6 +26,7 @@
     "url": "http://blakeembrey.me"
   },
   "type": "module",
+  "module": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js"
   },
